1.5 (2011-??-??)
  * New 'power.roc.test' function for sample size and power computations
  * New 'cov' and 'var' functions
  * New 'legacy.axes' argument to 'plot' 1-specificity rather than specificity
  * New 'axes' argument to turn off the plotting of the axis
  * New 'logcondens' and 'logcondens.smooth' smoothing methods.
  * 'auc' and 'multiclass.auc' objects now also have secondary class 'numeric'
  * Updated load call
  * Delong's CI reversed in ROC curves with direction=">"
  * Delong's CI AUC returned values > 1 or < 0 in some rare cases
  * Minor improvements in documentation

1.4.4 (2011-08-09)
  * Fixed alternative for one-tailed tests
  * Removed COPYING file to fix a warning in r-devel.

1.4.3 (2011-03-17)
  * Updated citation

1.4.2 (2011-03-03)
  * Fixed bootstrap 'roc.test' generating NAs when 'smooth.roc's were used with 'reuse.auc=FALSE' (thanks to Buddy for the report)
  * Documented a warning that was missing in roc.test
  * Updated citation
  
1.4.1 (2011-01-27)
  * 'venkatraman''s test for unpaired ROC curves
  
1.4 (2011-01-21)
  * 'smooth' does not apply on 'ordered' factors anymore
  * Multi-class AUC support
  * Can choose how 'best' thresold is determined ('best.method' and 'best.weights' in 'coords' and 'print.thres.best.method' and 'print.thres.best.weights' in 'plot.roc')
  * Minor fixes in documentation
  * 'print' now prints the response instead of "response" and more informative data in 'htest's
  * Bootstrap with 'ci.auc' consumes much less memory
  * Unpaired bootstrap and DeLong's test
  * Specificity and sensitivity tests (in 'roc.test')

1.3.2 (2010-08-24)
  * 'print.auc' printed incorrect CI in 'plot.roc' (thanks to Alexander B. Leichtle for the report)
  * Failed to detect local maximas in 'coords' when 2 or less points were selected
  * Don't consider ROC extremities (+-Inf at 1.0/0.0 SE<->SP) as local maximas

1.3.1 (2010-08-18)
  * Sensitivity and specificity were inverted in coords when results were reported as list